# Sr.-AI-LLM-Engineer-Take-Home-Assignment

./: Makefile  Procfile  README.md  cart_engine.py  cart_engine_v2.py  config.py  deploy.sh  evaluate.py  main.py  menu_data.py  nlp_processor.py  pyproject.toml  requirements.txt  setup_deploy.sh  smart_cart_parser.py  web_app.py
prompts/: large_menu_prompt.txt  small_menu_prompt.txt
templates/: index.html  index_simple.html  index_with_menu.html
