[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ultravox-client"
version = "0.1.0"
description = "Ultravox real-time voice client: ASR -> LLM -> TTS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pyee>=11.0.0",
    "ultravox-client>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
ultravox-client = "ultravox_client:main"
